# wPedals

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yaml
misc/docker/: Dockerfile  README.md
src/: CMakeLists.txt  hello.C
src/css/: pedals.css
